# ohjelmistotekniikka25

./: README.md
cloudleap/: .coveragerc  .pylintrc  pyproject.toml  schema.sqlite  tasks.py
cloudleap/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  todo.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
cloudleap/src/: backendleap.py  build.py  game_over.py  index.py  logged_in.py  objects.py  schema.sqlite  shared_resources.py  sql_connect.py  sql_queries.py  textmanager.py  userdata.py
cloudleap/src/assets/: sekvenssi2.md  sekvenssidiagrammi.md
cloudleap/src/database/: schema.sqlite  sql_connect.py  sql_queries.py  userdata.py
cloudleap/src/tests/: backend_test.py  sql_queries_test.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoly.md
