[project]
name = "cloudleap"
version = "0.1.0"
description = ""
authors = [
    {name = "Nea Kovalainen",email = "neakovalaine@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
