[project]
name = "cloudleap"
version = "0.1.0"
description = ""
authors = [
    {name = "Nea Kovalainen",email = "neakovalaine@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cowsay = "^6.1"
pygame = "^2.6.1"
invoke = "^2.2.0"
pytest = "^8.3.5"
coverage = "^7.7.1"
pygame-textinput = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
